# CityLens

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  patch_adk.py  pyproject.toml  requirements.txt
backend/agents/: guide_home_agent.py  maps_agent.py  orchestrator.py
backend/services/: firestore.py  maps.py
mobile/: App.tsx  app.json  index.ts  package-lock.json  package.json
mobile/components/: BigButton.tsx  CameraView.tsx  ModeSwitcher.tsx  QuickActions.tsx  StatusBar.tsx  TranscriptOverlay.tsx  WaveformVisualizer.tsx
mobile/constants/: colors.ts  config.ts
mobile/screens/: CityLensScreen.tsx  ModeSelectScreen.tsx
mobile/services/: audioCapture.ts  audioPlayback.ts  locationService.ts  websocket.ts
quick-live-web/: README.md  index.html  package-lock.json  package.json  vite.config.js
quick-live-web/src/: main.js  style.css
