[project]
name = "citylens-backend"
version = "0.1.0"
description = "FastAPI backend for CityLens"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.71.0",
    "google-cloud-firestore>=2.19.0",
    "google-genai>=1.0.0",
    "googlemaps>=4.10.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[tool.uv]
package = false
